<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_add_bookmark">Add bookmark</string>
    <string name="action_book_export_data">Export data</string>
    <string name="action_books_add_category">Add to category</string>
    <string name="action_books_delete">Delete</string>
    <string name="action_books_remove_category">Remove category</string>
    <string name="action_delete_category">Delete category</string>
    <string name="action_delete_theme">Delete</string>
    <string name="action_display_settings">Display Settings</string>
    <string name="action_feedback">Send feedback</string>
    <string name="action_goto_paper_page">Goto paper page</string>
    <string name="action_layout">Layout</string>
    <string name="action_layout_grid">Grid</string>
    <string name="action_layout_list">List</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_remove_bookmark">Remove bookmark</string>
    <string name="action_rename_category">Rename category</string>
    <string name="action_search">Search</string>
    <string name="action_search_clear">Clear</string>
    <string name="action_search_clear_history">Clear history</string>
    <string name="action_search_up">Back</string>
    <string name="action_search_voice">Search by voice</string>
    <string name="action_select_all">Select all</string>
    <string name="action_settings">Settings</string>
    <string name="action_sort">Sort by</string>
    <string name="action_sort_added_date">Date added</string>
    <string name="action_sort_author">Author</string>
    <string name="action_sort_last_read">Last read</string>
    <string name="action_sort_title">Title</string>
    <string name="action_themes_reset">Reset to defaults</string>
    <string name="action_toc">Contents</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="annotations_menu_desc">Actions</string>
    <string name="annotations_menu_notes">View larger notes</string>
    <string name="annotations_menu_remove">Remove</string>
    <string name="annotations_none">No highlights added.</string>
    <string name="annotations_notes_dialog_ok">Close</string>
    <string name="annotations_notes_title">Your notes</string>
    <string name="annotations_text_unavailable">(Text unavailable. Visit this highlight to update.)</string>
    <string name="app_name">Helium</string>
    <string name="app_name_pro">Helium Pro</string>
    <string name="app_shortcut_disabled">This book was deleted from Helium.</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="book_add_to_category_dialog_cancel">Cancel</string>
    <string name="book_add_to_category_dialog_new_category">Create category</string>
    <string name="book_add_to_category_dialog_title">Add to category</string>
    <string name="book_delete_dialog_also_delete_file">Delete from device too</string>
    <string name="book_delete_dialog_cancel">Cancel</string>
    <string name="book_delete_dialog_ok">Delete</string>
    <string name="book_delete_dialog_title_one">Delete %1$s?</string>
    <string name="book_external_link_no_app">No app is installed to handle this type of link.\n\n%1$s</string>
    <string name="book_external_link_no_app_ok">OK</string>
    <string name="book_external_link_warning_cancel">Cancel</string>
    <string name="book_external_link_warning_message">A web browser will be launched if opened.</string>
    <string name="book_external_link_warning_open">Open</string>
    <string name="book_external_link_warning_title">Open link to %1$s?</string>
    <string name="book_failed_error_message">Something went wrong while loading the book.\n\nIf you press \"Report\" an e-mail will be opened with debug data attached.</string>
    <string name="book_failed_ok">OK</string>
    <string name="book_failed_report">Report</string>
    <string name="book_no_creator">N/A</string>
    <string name="book_not_found_error_message">&lt;b&gt;%1$s&lt;/b&gt; is missing.</string>
    <string name="book_not_found_error_title">File not found</string>
    <string name="book_not_found_ok">OK</string>
    <string name="book_remove_from_category_dialog_cancel">Cancel</string>
    <string name="book_remove_from_category_dialog_ok">Remove</string>
    <string name="book_search_hint">Search books</string>
    <string name="bookmark_detail_line">Page %1$d • %2$s</string>
    <string name="bookmark_menu_desc">Actions</string>
    <string name="bookmark_menu_remove">Remove</string>
    <string name="bookmarks_none">No bookmarks added.</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="categories_new">Create category</string>
    <string name="categories_title">Categories</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="checked_desc">Checked</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="error_content_details_title">Technical details</string>
    <string name="error_content_details_url">URL:</string>
    <string name="error_content_missing_message">This part of the book couldn\'t be shown because it\'s missing.\n\nIf it isn\'t important, you can skip it and keep reading.</string>
    <string name="error_content_missing_title">Content missing</string>
    <string name="export_dialog_data_label">Data to export</string>
    <string name="export_dialog_format_html">HTML file (web page, includes colors)</string>
    <string name="export_dialog_format_label">Format</string>
    <string name="export_dialog_format_txt">Text file (lacks highlight colors)</string>
    <string name="export_dialog_opt_bookmarks">Bookmarks</string>
    <string name="export_dialog_opt_highlights">Highlights &amp; notes</string>
    <string name="new_category_banner_done">+ Add</string>
    <string name="new_category_banner_title">Select books for this category</string>
    <string name="no_books_library_desc">We\'ll show your books here automatically. If we\'re missing something, tap Refresh.</string>
    <string name="no_books_library_refresh">Refresh</string>
    <string name="no_books_library_title">No books</string>
    <string name="no_books_search">No results %1$s</string>
    <string name="permissions_continue">Continue</string>
    <string name="permissions_exit">Exit</string>
    <string name="permissions_explanation">Helium needs storage access to find and read books.</string>
    <string name="permissions_title">Storage permission required</string>
    <string name="pref_app_theme_title">App theme</string>
    <string name="pref_book_wide_pages_title">Use book-wide page indicator</string>
    <string name="pref_build_version_title">App version</string>
    <string name="pref_category_about">About</string>
    <string name="pref_category_accessibility">Accessibility</string>
    <string name="pref_category_advanced">Advanced</string>
    <string name="pref_category_navigation">Navigation</string>
    <string name="pref_disable_drawer_gesture_title">Disable drawer swipe while reading</string>
    <string name="pref_folders_in_drawer_title">Show folder list in drawer</string>
    <string name="pref_fullscreen_title">Fullscreen reading</string>
    <string name="pref_keep_screen_on_title">Keep screen on</string>
    <string name="pref_library_folder_custom">Custom folder</string>
    <string name="pref_library_folder_custom_path">Full path</string>
    <string name="pref_library_folder_custom_summary">Add books from only the specified folder (and sub-folders)</string>
    <string name="pref_library_folder_none">None</string>
    <string name="pref_library_folder_none_summary">Allow Helium to add books from wherever it finds them.</string>
    <string name="pref_library_folder_title">Library folder</string>
    <string name="pref_open_last_book_title">Open last book on launch</string>
    <string name="pref_screen_rotation_title">Rotation lock</string>
    <string name="pref_tap_pagination_title">Tap left/right to turn pages</string>
    <string name="pref_volume_pagination_title">Use volume buttons to turn pages</string>
    <string name="pref_warn_external_links_title">Confirm when opening web links</string>
</resources>