<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreferenceCompat
        android:title="@string/pref_keep_screen_on_title"
        android:key="keep_screen_on"
        android:defaultValue="true"/>
    <SwitchPreferenceCompat
        android:title="@string/pref_fullscreen_title"
        android:key="fullscreen"
        android:defaultValue="true"/>
    <ListPreference
        android:persistent="false"
        android:title="@string/pref_app_theme_title"
        android:key="app_theme"
        android:summary="%s"
        android:negativeButtonText="@null"/>
    <PreferenceCategory android:title="@string/pref_category_navigation">
        <SwitchPreferenceCompat
            android:title="@string/pref_tap_pagination_title"
            android:key="tap_pagination"
            android:defaultValue="false"/>
        <ListPreference
            android:entries="@array/pref_volume_pagination_keys"
            android:title="@string/pref_volume_pagination_title"
            android:key="volume_pagination"
            android:summary="%s"
            android:defaultValue="disabled"
            android:negativeButtonText="@null"
            android:entryValues="@array/pref_volume_pagination_values"/>
        <SwitchPreferenceCompat
            android:title="@string/pref_warn_external_links_title"
            android:key="warn_external_links"
            android:defaultValue="true"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_accessibility">
        <SwitchPreferenceCompat
            android:title="@string/pref_disable_drawer_gesture_title"
            android:key="disable_drawer_gesture"
            android:defaultValue="false"/>
        <ListPreference
            android:entries="@array/pref_screen_rotation_keys"
            android:title="@string/pref_screen_rotation_title"
            android:key="screen_rotation"
            android:summary="%s"
            android:defaultValue="auto"
            android:negativeButtonText="@null"
            android:entryValues="@array/pref_screen_rotation_values"/>
        <SwitchPreferenceCompat
            android:title="@string/pref_open_last_book_title"
            android:key="open_last_book"
            android:defaultValue="false"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_advanced">
        <com.hieuld.helium.library.LibraryFolderPreference
            android:title="@string/pref_library_folder_title"
            android:key="library_folder"/>
        <SwitchPreferenceCompat
            android:title="@string/pref_folders_in_drawer_title"
            android:key="folders_in_drawer"
            android:defaultValue="false"/>
        <SwitchPreferenceCompat
            android:title="@string/pref_book_wide_pages_title"
            android:key="book_wide_pages"
            android:defaultValue="true"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_about">
        <Preference
            android:title="@string/pref_build_version_title"
            android:selectable="false"
            android:key="build_version"/>
<!--        <Preference-->
<!--            android:title="@string/pref_privacy_title"-->
<!--            android:key="privacy"/>-->
<!--        <Preference-->
<!--            android:title="@string/pref_licenses_title"-->
<!--            android:key="licenses"/>-->
    </PreferenceCategory>
</PreferenceScreen>
