<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/refresh"
        android:title="@string/action_refresh"
        app:showAsAction="never"/>
    <item
        android:icon="@drawable/ic_action_sort"
        android:id="@+id/sort"
        android:title="@string/action_sort"
        app:showAsAction="never">
        <menu>
            <group
                android:id="@+id/sort_group"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/sort_title"
                    android:title="@string/action_sort_title"/>
                <item
                    android:id="@+id/sort_author"
                    android:title="@string/action_sort_author"/>
                <item
                    android:id="@+id/sort_added_date"
                    android:title="@string/action_sort_added_date"/>
                <item
                    android:id="@+id/sort_last_read"
                    android:title="@string/action_sort_last_read"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/layout"
        android:title="@string/action_layout"
        app:showAsAction="never">
        <menu>
            <group
                android:id="@+id/layout_group"
                android:checkableBehavior="single">
                <item
                    android:id="@+id/layout_grid"
                    android:title="@string/action_layout_grid"/>
                <item
                    android:id="@+id/layout_list"
                    android:title="@string/action_layout_list"/>
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/select_all"
        android:title="@string/action_select_all"
        app:showAsAction="never"/>
    <group android:id="@+id/group_category_actions">
        <item
            android:id="@+id/rename_category"
            android:title="@string/action_rename_category"/>
        <item
            android:id="@+id/delete_category"
            android:title="@string/action_delete_category"/>
    </group>
</menu>
