<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_action_search"
        android:id="@+id/search"
        android:title="@string/action_search"
        app:showAsAction="ifRoom"/>
    <item
        android:icon="@drawable/ic_action_display_settings"
        android:id="@+id/displaySettings"
        android:title="@string/action_display_settings"
        app:showAsAction="always"/>
    <item
        android:icon="@drawable/ic_action_add_bookmark"
        android:id="@+id/bookmark"
        android:title="@string/action_add_bookmark"
        app:showAsAction="ifRoom"/>
    <item
        android:icon="@drawable/ic_action_toc"
        android:id="@+id/toc"
        android:title="@string/action_toc"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/goto_paper_page"
        android:title="@string/action_goto_paper_page"
        app:showAsAction="never"/>
    <item
        android:id="@+id/settings"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
    <item
        android:id="@+id/feedback"
        android:title="@string/action_feedback"
        app:showAsAction="never"/>
</menu>
