<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_action_add_category"
        android:id="@+id/add_to_category"
        android:title="@string/action_books_add_category"/>
    <item
        android:icon="@drawable/ic_action_remove_category"
        android:id="@+id/remove_from_category"
        android:title="@string/action_books_remove_category"/>
    <item
        android:icon="@drawable/ic_action_delete"
        android:id="@+id/delete"
        android:title="@string/action_books_delete"/>
    <item
        android:id="@+id/export"
        android:title="@string/action_book_export_data"
        app:showAsAction="never"/>
    <item
        android:id="@+id/select_all"
        android:title="@string/action_select_all"
        app:showAsAction="never"/>
</menu>
