<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingTop="8dp"
    android:paddingRight="24dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="320dp">
    <TextView
        android:textSize="14sp"
        android:textColor="?android:attr/textColorSecondary"
        android:id="@+id/book_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"/>
    <TextView
        android:textSize="14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/export_dialog_data_label"
        android:fontFamily="sans-serif-medium"/>
    <CheckBox
        android:id="@+id/data_highlights"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/export_dialog_opt_highlights"/>
    <CheckBox
        android:id="@+id/data_bookmarks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/export_dialog_opt_bookmarks"/>
    <TextView
        android:textSize="14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/export_dialog_format_label"
        android:fontFamily="sans-serif-medium"/>
    <RadioGroup
        android:id="@+id/format_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/format_txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/export_dialog_format_txt"/>
        <RadioButton
            android:id="@+id/format_html"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/export_dialog_format_html"/>
    </RadioGroup>
</LinearLayout>
