<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingTop="8dp"
    android:paddingRight="24dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minWidth="320dp">
    <RadioGroup
        android:id="@+id/selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pref_library_folder_none"
            android:fontFamily="sans-serif-medium"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/pref_library_folder_none_summary"
            android:layout_marginStart="40dp"/>
        <RadioButton
            android:id="@+id/custom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/pref_library_folder_custom"
            android:fontFamily="sans-serif-medium"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:text="@string/pref_library_folder_custom_summary"
            android:layout_marginStart="40dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="8dp"
            android:hint="@string/pref_library_folder_custom_path"
            android:layout_marginStart="40dp">
            <com.google.android.material.textfield.TextInputEditText
                android:textSize="14sp"
                android:id="@+id/path"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>
    </RadioGroup>
</LinearLayout>
