<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/container"
    android:background="#fff"
    android:padding="32dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_error_large"
        android:contentDescription="@null"/>
    <TextView
        android:textSize="24sp"
        android:textColor="@color/black_high"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/error_content_missing_title"
        android:fontFamily="sans-serif-medium"/>
    <TextView
        android:textSize="16sp"
        android:textColor="@color/black_medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/error_content_missing_message"
        android:lineSpacingMultiplier="1.2"/>
    <TextView
        android:textSize="18sp"
        android:textColor="@color/black_high"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/error_content_details_title"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">
        <TextView
            android:textSize="16sp"
            android:textColor="@color/black_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/error_content_details_url"
            android:layout_weight="1"/>
        <TextView
            android:textSize="16sp"
            android:textColor="@color/black_medium"
            android:id="@+id/url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>
