<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    android:clipToPadding="false"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="?attr/actionBarSize">
    <ImageView
        android:id="@+id/empty_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_library_empty"
        android:contentDescription="@null"
        app:tint="?android:attr/textColorPrimary"/>
    <TextView
        android:textSize="20sp"
        android:textColor="?android:attr/textColorPrimary"
        android:gravity="center"
        android:id="@+id/empty_title"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/no_books_library_title"
        android:fontFamily="sans-serif-condensed"/>
    <TextView
        android:textSize="16sp"
        android:textColor="?android:attr/textColorSecondary"
        android:gravity="center"
        android:id="@+id/empty_text"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/no_books_library_desc"
        android:fontFamily="sans-serif-regular"/>
    <Button
        android:id="@+id/empty_refresh"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/no_books_library_refresh"/>
</LinearLayout>
