<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:textSize="16sp"
        android:textColor="?android:attr/textColorSecondary"
        android:layout_gravity="top|center_horizontal"
        android:id="@+id/search_empty_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/no_books_search"
        android:drawableTop="@drawable/ic_empty_search"
        android:drawablePadding="4dp"
        android:fontFamily="sans-serif-medium"
        app:drawableTint="?android:attr/textColorPrimary"/>
    <ScrollView
        android:layout_gravity="center_vertical"
        android:id="@+id/empty_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:id="@+id/new_category_banner"
            android:background="?attr/colorSurface"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="16dp">
                <TextView
                    android:textSize="18sp"
                    android:textColor="?android:attr/textColorPrimary"
                    android:id="@+id/new_category_banner_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/new_category_banner_title"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif-medium"/>
                <Button
                    android:id="@+id/new_category_banner_done"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="8dp"
                    android:minWidth="0dp"
                    android:text="@string/new_category_banner_done"
                    android:layout_marginEnd="8dp"
                    style="@style/Widget.MaterialComponents.Button.TextButton"/>
            </LinearLayout>
        </FrameLayout>
        <com.hieuld.reader.widget.AutoFitRecyclerView
            android:scrollbarStyle="outsideOverlay"
            android:id="@+id/books"
            android:padding="5dp"
            android:scrollbars="vertical"
            android:clipToPadding="false"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
</FrameLayout>
